纠正英文拼写

--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Chating</title>
+<title>socket聊天室</title>
 <script type="text/javascript" src="javascripts/jquery.min.js"></script>
 <script type="text/javascript" src="javascripts/jquery.cookie.js"></script>
 <script type="text/javascript" src="javascripts/json2.js"></script>
